--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-/bootstrap/compiled.php
-.env.*.php
-.env.php
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
 .env
